chore(defaultr): change access modifiers of Key's methods (#20)
* chore(defaultr): change access modifiers of Key's methods

* chore(removr): fix typo and update javadoc

* chore(removr): remove useless type checking

* chore(removr): supplement unit test cases

* doc: add codecov badge